# dreamescape_ai

./: .env.example  .gitignore  Dockerfile  README.md  Vagrantfile  app.py  docker-compose.yml  main.py  provision.sh  pyproject.toml  pytest.ini  reproduce_owner_id_error.py  requirements.txt  verify_relationships.py
.github/workflows/: main.yml
deploy/: docker-compose.yml
docs/: AGENT_HANGING.md  send_message.txt  single_message_scenario.txt
google_api_mock/: Dockerfile  mock_google_api.py
scripts/: check_llm_works.py  init.sql  seed_minio_media.py
settings/: conf.py
src/: app.py  conf.py  main.py
src/application/: authz.py  llm_watchdog.py  ports.py
src/domain/: models.py
src/infrastructure/: di.py  exceptions.py
tests/e2e/: conftest.py  test_agent_rabbit_flow.py  test_auth_login.py  test_characters_api.py  test_chats_api.py  test_media_api.py  test_messages_api.py  test_scenes_api.py  test_users_api.py
tests/unit/: test_auth_service.py  test_character_gateway.py  test_character_service.py  test_chat_event_gateway.py  test_chat_gateway.py  test_chat_service.py  test_chats_service.py  test_gateway_factory.py  test_google_gateway.py  test_image_reader.py  test_initial_message_service.py  test_jwt_service.py  test_llm_watchdog.py  test_log_redact.py  test_media_gateway.py  test_media_service.py  test_message_gateway.py  test_message_service.py  test_mock_gateway.py  test_mock_scripulya_agent_client.py  test_object_storage_gateway.py  test_password_hasher.py  test_prompt.py  test_rabbit_llm.py  test_redis_heartbeat.py  test_scene_gateway.py  (+5 more)
(+78 files in other folders)
