[project]
name = "scripulya-ai"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = [
    "asgi-correlation-id==4.3.4",
    "asyncpg==0.31.0",
    "click==8.3.3",
    "dishka==1.10.1",
    "fastapi==0.136.1",
    "faststream[rabbit]==0.6.7",
    "google-genai>=2.3.0",
    "greenlet==3.5.0",
    "httpcore==1.0.9",
    "httplib2==0.31.2",
    "httpx==0.28.1",
    "iniconfig==2.3.0",
    "minio==7.2.20",
    "psycopg2-binary==2.9.12",
    "pydantic==2.13.3",
    "pydantic-core==2.46.3",
    "pydantic-settings==2.14.0",
    "pyjwt==2.12.1",
    "pytest==9.0.3",
    "pytest-asyncio==0.21.1",
    "python-dotenv==1.2.2",
    "python-jose==3.5.0",
    "python-multipart==0.0.28",
    "requests==2.33.1",
    "sqlalchemy==2.0.49",
    "starlette==1.0.0",
    "tenacity==9.1.4",
    "typing-extensions==4.15.0",
    "uritemplate==4.2.0",
    "uvicorn==0.46.0",
]

[tool.ruff]
line-length = 120
extend-exclude = ["venv", ".venv"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[pytest]
markers = [
    "unit: marks tests as unit tests",
    "e2e: marks tests as e2e tests",
]
